# aditya_music_analysis

./: .gitignore  Procfile  README.md  app.json  database.py  direct_upload.py  documentation.md  flat-requirements.txt  package-lock.json  pyproject.toml  requirements-all.txt  requirements.txt  start.sh  test_upload.py  to-do   upload_test.html
Backend/: .gitignore  README.md  requirements.txt  reset_db.py
Backend/fastapi_app/: README_DATABASE_MIGRATION.md  README_ML.md  advanced_ml_models.py  check_db.py  database.py  dataset_processor.py  direct_import.py  dump_db.py  earnings_calculator.py  feature_engineering.py  feature_processor.py  hyperparameter_tuning.py  init_db.py  main.py  migrate_sqlite_to_postgres.py  ml_models.py  model_api.py  model_trainer.py  prediction_service.py  requirements.txt  reset_db.py  routes.py  schemas.py
Backend/fastapi_app/analyzer/: __init__.py  base_analyzer.py  category_analyzer.py  comment_count_analyzer.py  duration_analyzer.py  like_count_analyzer.py  main.py  published_at_analyzer.py  tag_analyzer.py  thumbnail_analyzer.py  title_analyzer.py  view_count_analyzer.py
Backend/static/: style.css
aditya-music-profit-predictor/: README.md  package-lock.json  package.json
adv-analytics/: Dockerfile  README.md  eslint.config.mjs  next.config.js  package-lock.json  package.json
adv-analytics/app/: custom-styles.css  globals.css  layout-with-antd.tsx  layout.tsx  not-found.tsx  page.tsx
adv-analytics/docs/: DB-CONFIG.md
adv-analytics/scripts/: migrate-env-to-db.ts
adv-analytics/types/: react-plotly.d.ts
(+64 files in other folders)
